--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,25 +11,37 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         android:id="@+id/yahoo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerInParent="true"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello Vineeth\nThis is Sai Krishna"
         tools:layout_editor_absoluteY="265dp"
+        android:layout_below="@+id/yahoo"
+        android:layout_centerHorizontal="true"
         tools:layout_editor_absoluteX="154dp" />
+
 
     <Button
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:text="Submit Button"
-
         android:id="@+id/submitButton"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:text="ReSubmit Button"
+        android:id="@+id/resubmitButton"
+        android:layout_below="@+id/submitButton"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
+
+
+
+</RelativeLayout>
