--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,17 +27,30 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:text="Submit Button"
-
         android:id="@+id/submitButton"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
+
+    <Button
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:text="ReSubmit Button"
+        android:id="@+id/resubmitButton"
+        tools:layout_editor_absoluteX="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/submitButton" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello Change by Vineeth"
         tools:layout_editor_absoluteY="156dp"
-        tools:layout_editor_absoluteX="117dp" />
+        tools:layout_editor_absoluteX="117dp"
+        android:id="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView"
